Adding line rendering along with the compute-trig cycle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
               "xstring": "c",
               "xtr1common": "c",
               "xtree": "c",
-              "xutility": "c"
+              "xutility": "c",
+              "random": "c"
        }
 }
